--- a/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="jumbotron">
-    <h1>WELCOME bij het Qteam</h1>
+    <center><h1>WELCOME bij het Qteam</h1></center>
 </div>
 
 <p></p>
@@ -20,7 +20,7 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_ExtraControles", "fas fa-tachometer-alt", "ExtraControles", helperText: " Automatische lijst met de Extra Controles")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_ExtraControles", "fas fa-list-ol", "ExtraControles", helperText: " Automatische lijst met de Extra Controles")
 
 </div>
 <p></p>
@@ -35,7 +35,7 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/_Plans", "fas fa-tachometer-alt", "Auto Plannen ", helperText: "Automatische lijst met de Ultralog plannen laatst uitgevoerd")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/_Plans", "fas fa-columns", "Auto Plannen ", helperText: "Automatische lijst met de Ultralog plannen laatst uitgevoerd")
 
 </div>
 <p></p>
@@ -50,7 +50,7 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/ULRapportering", "fas fa-tachometer-alt", "Ultralog Rapport Last Week ", helperText: "Automatische lijst rapportering Ultralog")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/ULRapportering", "fas fa-check-square", "Ultralog Rapport Last Week ", helperText: "Automatische lijst rapportering Ultralog")
 
 </div>
 <p></p>
