--- a/EqUiWebUi/Areas/Welding/Views/TeardownTeam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/TeardownTeam/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="jumbotron">
-    <h1>WELCOME bij het TearDown Team</h1>
+    <center><h1>WELCOME bij het TearDown Team</h1></center>
 </div>
 
 <p></p>
@@ -54,3 +54,14 @@
 </div>
 <p></p>
 
+@*This card is default collapsed see fa-rotate-180 and display:none*@
+<div class="card">
+    <div class="card-header bg-danger">
+        <h5 class="card-title text-white">
+           Teardown Config
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-rotate-180 fa-1"></i></span>
+        </h5>
+    </div>
+    <div class="card-body" style="display:none">
+
+    
