--- a/EqUiWebUi/Areas/Welding/Views/ARO/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/ARO/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="jumbotron">
-    <h1>WELCOME op de ARO pagina</h1>
+    <center><h1>WELCOME op de ARO pagina</h1></center>
 </div>
 
 <p></p>
@@ -12,14 +12,15 @@
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-           default
+            ARO Alerts
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
-
     <p></p>
-
-    @MyHtmlHelpers.EquiLink("/Welding/ARO/index", "fas fa-tachometer-alt", "default", helperText: " default")
+    <p>
+        <a href="~/Alert/Alert/AASPOTIndex" class="btn btn-primary btn-sm">Aro Technician Alerts &raquo;</a>
+        Cylinder/SBCU data triggers
+    </p>
 
 </div>
 <p></p>
