fixed bug when text search is null

--- a/EqUiWebUi/Views/PowerBi/Index.cshtml
+++ b/EqUiWebUi/Views/PowerBi/Index.cshtml
@@ -27,3 +27,22 @@
     </div>
 </div>
 
+<hr />
+
+<div class="card">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            Automatic fault registration. (VASC tableau demo) *Testing to move to over to powerbi
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+    <div class="card-body">
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=VCCH_Breakdowns&sheet=ObjectTreeWithTrend" class="btn btn-primary btn-sm">Tree (FaultLevel) &raquo;</a>
+            Aantal storingen per fout + trend grafiek
+        </p>
+
+
+    </div>
+</div>
+
