--- a/EqUiWebUi/Views/PowerBi/Index.cshtml
+++ b/EqUiWebUi/Views/PowerBi/Index.cshtml
@@ -32,7 +32,7 @@
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-            Automatic fault registration. (VASC tableau demo) *Testing to move to over to powerbi
+            Automatic fault registration. (VASC tableau demo) *Testing to move to powerbi
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
@@ -41,7 +41,10 @@
             <a href="~/tableau/EmbeddedDesktop?workbook=VCCH_Breakdowns&sheet=ObjectTreeWithTrend" class="btn btn-primary btn-sm">Tree (FaultLevel) &raquo;</a>
             Aantal storingen per fout + trend grafiek
         </p>
-
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=VCCH_TipChangeAnalysis&sheet=DashboardTipchangeAnalysis" class="btn btn-primary btn-sm">Tipchange &raquo;</a>
+           Tipchange analyse
+        </p>
 
     </div>
 </div>
