--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -16,11 +16,11 @@
 
         @if (System.Configuration.ConfigurationManager.AppSettings["Maximo_SiteID"].ToString() == "VCCH")
         {
-            <a class="navbar-brand py-0 clickable" style="padding-left: 50px; padding-right:100px;" href='@Url.Action("Index", "Home", new { area = "" }, null)' data-toggle="tooltip" title="Homepage">
+            <a class="navbar-brand py-0 clickable" style="padding-left: 80px; padding-right:70px;" href='@Url.Action("Index", "Home", new { area = "" }, null)' data-toggle="tooltip" title="Homepage">
                 <img height="50" width="50" src="~/Content/images/volvo-USA.png" />
             </a>
         }
-        else
+        else //default
         {
             <a class="navbar-brand py-0 clickable" href='@Url.Action("Index", "Home", new { area = "" }, null)' data-toggle="tooltip" title="Homepage">
                 <img src="~/Content/images/volvo-50.png" />
