--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -20,6 +20,12 @@
                 <img height="50" width="50" src="~/Content/images/volvo-USA.png" />
             </a>
         }
+        else if (System.Configuration.ConfigurationManager.AppSettings["Maximo_SiteID"].ToString() == "VCG")
+        {
+            <a class="navbar-brand py-0 clickable" style="padding-left: 80px; padding-right:70px;" href='@Url.Action("Index", "Home", new { area = "" }, null)' data-toggle="tooltip" title="Homepage">
+                <img height="50" width="50" src="~/Content/images/volvo-BE.png" />
+            </a>
+        }
         else //default
         {
             <a class="navbar-brand py-0 clickable" href='@Url.Action("Index", "Home", new { area = "" }, null)' data-toggle="tooltip" title="Homepage">
