--- a/EqUiWebUi/Areas/Welding/Views/TeardownTeam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/TeardownTeam/Index.cshtml
@@ -58,10 +58,14 @@
 <div class="card">
     <div class="card-header bg-danger">
         <h5 class="card-title text-white">
-           Teardown Config
+            Teardown Config
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-rotate-180 fa-1"></i></span>
         </h5>
     </div>
-    <div class="card-body" style="display:none">
+    <p> </p>
+    <p>
+        <a href="~/Welding/teardownTeam/Index" class="btn btn-primary btn-sm">add a teardownpicture</a>
 
-    
+    </p>
+
+
