renamed UltralogExportTool and fixed some issue with profiles for Vcch

--- a/EqUiWebUi/Areas/UltraLog/Views/Ultralog/Index.cshtml
+++ b/EqUiWebUi/Areas/UltraLog/Views/Ultralog/Index.cshtml
@@ -5,6 +5,6 @@
 
 <h2>Ultralog</h2>
 
-@MyHtmlHelpers.EquiLink(@Url.Action("UlExportTool.application", "ULExportTool", new { area = "" }, null), "fas fa-file-excel", "ULExportTool (run)", helperText: "Start the ultra log data export tool")
+@MyHtmlHelpers.EquiLink(@Url.Action("UltralogExportTool.application", "UltralogExportTool", new { area = "" }, null), "fas fa-file-excel", "UltralogExportTool (run)", helperText: "Start the ultra log data export tool")
 
 @MyHtmlHelpers.EquiLink(@Url.Action("ControlPlanViewer"), "fas fa-file-excel", "ControlPlanViewer", helperText: "Show active and complete control plans")
